Fixed overlapping issues on 13 inch devices

--- a/app/main.css
+++ b/app/main.css
@@ -980,3 +980,78 @@ body{
         height: 400px;
     }
   }
+
+@media only screen and (min-width: 1280px) and (max-width: 1440px) {
+    
+    .navbar-light{  
+        background-color: rgba(169,169,169,255);
+        color: rgba(3,3,3,255);
+        height: 125px;
+        max-width: 100%;
+        padding-left: 90px;
+        padding-left: 160px;
+        display: flex;
+        /*justify-content: center;
+        align-items: center; */
+    }
+
+    .navbar-first-sec{
+        display: flex;
+        flex-direction: row;
+        padding: 10px 15px;
+        /* margin-left: 20px; */
+        width: 100%;
+        z-index: 1;
+        
+    }
+    
+    .navbar-light-heading{
+        position:relative;
+        /* margin-left: 120px; */
+        margin-right: 90px;
+        font-size: 30px;
+        padding-left: 40px;
+    }
+
+    .navbar-light-contact{
+        position: relative;
+        
+        padding: 11px 15px;
+        margin-left: 220px;
+        width: 130px;
+        height: 50px;
+        border-radius: 6px;
+        font-size: 13.5px;
+        color: white;
+        font-weight: bold;
+    }
+
+    .navbar-all-comps{
+        z-index: 3;
+        right: 54%;
+        position: relative;
+        font-size: 20px;
+        margin-right: 10px;
+        
+    }
+    
+    .navbar-light-comps{
+        /* display: flex;
+        
+        flex-direction: row; */
+        /* padding-left: 20px; */
+        /* margin-right: 20px; */
+        font-size: 21px;
+        flex: 1 1 1;
+    }
+
+    .service-1{
+        height: 715px;
+    }
+
+    .service-2{
+        height: 685px;
+    }
+
+
+}
